2007-09-03  Oliver Hader  <oh@inpublica.de>

	* (minor) Fixed bug #6104: IRRE - IE7: Strange behaviour with hover event of nested Tabs/IRRE-levels with relative positioned HTML elements
	* (minor) Fixed bug #5906: IRRE - Default values defined in TCA are not used for children (thanks to Joscha Feth and Jeff Segars)

2007-08-15  Wolfgang Klinger  <wk@plan2.net>

	* (trivial) Added is_array checks in extension manager code (committed by Stucki)

2007-08-23  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed: hanging recordset in t3lib_BEfunc

2007-08-23  Andreas Otto  <andreas.otto@dkd.de>

        * (trivial) Fixed bug #4888: Invalid argument supplied for foreach()

2007-08-06  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #5941: Log reason of failure on DB connect

2007-07-16  Michael Stucki  <michael@typo3.org>

	* Release of TYPO3 4.1.2
	* Fixed possible XSS in workspace/version modules (requires valid BE login / patch by Christian Kuhn)
	* Removed possible display of phpinfo() (requires bug in extension to be unveiled)

2007-07-16  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5556: IRRE - RTE in child elements overwrites field in parent element

2007-07-16  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Fixed bug #3834: possible abuse of t3lib_formmail
	* t3lib_div::getHostname() used $_SERVER instead of t3lib_div::getIndpEnv()
	* IPmaskList check is triggered in CLI mode (thanks to Tobias Rohrle)

2007-07-14  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5704: IRRE - Children on the table pages get the pid of the parent page in pagetree
	* Fixed bug #5718: IRRE - Copying a page with related child records leads to duplicates of each children
	* Fixed bug #5907: RTE-Plugins: Use record specific RTEtsConfigParams

2007-07-13  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5913: RTEhtmlarea not correctly displayed in IRRE child form-fields and tabs (continuance of bug #5177)