@@ -1,3 +1,7 @@
+2007-09-05  Thorsten Kahler  <thorsten.kahler@dkd.de>
+
+	* Fixed bug #4160: Moving content elements in frontent editing mode causes crash
+
 2007-09-03  Oliver Hader  <oh@inpublica.de>
 
 	* (minor) Fixed bug #6104: IRRE - IE7: Strange behaviour with hover event of nested Tabs/IRRE-levels with relative positioned HTML elements
